Move sign in and sign out to general layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,13 @@
 
   <body>
     <%= yield %>
+    <%# flash message %>
+    <p><%= notice %></p>
+    <%# current user is the logged in user %>
+    <% if current_user  %>
+      <%= button_to "Log out", destroy_user_session_path, :method => "delete" %>
+    <% else  %>
+      <%= link_to "Sign in ", new_user_session_path %>
+    <% end  %>
   </body>
 </html>
