--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
     </style>
 <div class="leading-normal tracking-normal text-gray-900" style="font-family: 'Source Sans Pro', sans-serif;">
 
-	<div class="h-screen pb-14 bg-right bg-cover" style="background-image:<%= image_tag asset_path('bg.svg') %>">
+	<div class="h-screen pb-14 bg-right bg-cover" style="background-image:<%= image_tag asset_path('healthsymbol.svg') %>">
 		<!--Nav-->
 		<div class="w-full container mx-auto p-6">
 				
@@ -66,8 +66,8 @@
 			</div>
 			
 			<!--Right Col-->
-			<div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
-				<%= image_tag asset_path ('devices.svg'), class: 'w-5/6 mx-auto lg:mr-0 slide-in-bottom' %>
+			<div class="w-full xl:w-3/5 py-6 overflow-y-hidden border-4 border-dotted border-red-500">
+				<%= image_tag asset_path ('healthsymbol.svg'), class: 'w-5/6 mx-auto lg:mr-0 slide-in-bottom' %>
 			</div>
 			
 			<!--Footer-->
